compiler/kernc_cli/tests/soundness/reject/closures/capturing_closure_stored_in_struct_cannot_escape.kn
// class: escaping-stack-state
// source: escaping closure environments must be rejected even when hidden behind aggregate fields
// stderr: capturing closure environment escapes into a return value
// stderr: closure environment is stored in the current stack frame
// stderr-not: LLVM IR Verification Failed

struct Holder {
    cb: &Fn(i32) i32,
};

fn make() Holder {
    let base = 7i32;
    return Holder.{ cb: [base](x: i32) i32 {
        return x + base;
    } };
}

fn main() i32 {
    let holder = make();
    return holder.cb(5);
}
